tests/errors/duration-out-of-order/errors.snap
---
source: tests/errors.rs
assertion_line: 50
expression: output
---
error[E0015]: Duration units must each appear at most once, in descending order: d, h, m, s, ms, us, ns.
  ╭─▸ tests/errors/duration-out-of-order/main.pa:1:17
  │
1 │ def backwards = 20s2m
  │                 ^^^^^
  ╰─
